--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                         data-scroll-reveal="enter left move 30px over 0.6s after 0.4s">
                         <h1>Enabling small vendors achieve  <em>BIG</em></h1>
                         <p>Order your daily needs from the comfort of your home and get them delivered within a remarkable time of 1 hour , just click the try now button below to experience a new shopping experience</p> 
-                        <a href="" class="main-button-slider">Try Now</a>
+                        <a href="https://wa.me/+14155238886?text=join%20his-low" class="main-button-slider">Try Now</a>
                         <a href="#about" class="main-button-slider-unactive">Features</a>
 
                     </div>
@@ -146,7 +146,7 @@
                             <img src="assets/images/about-icon-01.png" alt="">
                             <div class="text">
                                 <h4>Click the <a
-                                rel="nofollow" href="#" target="_blank">try now</a> button</h4>
+                                rel="nofollow" href="https://wa.me/+14155238886?text=join%20his-low" target="_blank">try now</a> button</h4>
                                 <p>Send a Hi and enter your details to see the nearest available shops.</p>
                             </div>
                         </li>
